<resources>
    <string name="app_name">Rental shop</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_now">login Now</string>
    <string name="dont_remember">¿Don\'t remember password?</string>
    <string name="or">Or</string>
    <string name="sign_fb">Sign up with facebook</string>
    <string name="dont_acc">¿Don\'t have an account?</string>
    <string name="log_in_error">¡Login error!</string>
    <string name="firebase_auth_error">¡Firebase auth error!</string>
    <string name="close_sesion_error">¡Error to sing out!</string>
    <string name="revoke">Revoke acces</string>
    <string name="close_s">You must sing out to leave</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="r_pass">Re-type the password</string>
    <string name="register_from">Register form</string>
    <string name="loading">Loading...</string>
    <string name="empty">¡There are empty fields!</string>
    <string name="done">¡Save successfully!</string>
    <string name="welcome">¡Welcome!</string>
    <string name="error">Not valid user.</string>
    <string name="navigation_drawer_open">Open nav drawer</string>
    <string name="navigation_drawer_close">Close nav drawer</string>
    <string name="fragment">Test Fragment</string>
    <string name="not_match">¡Not Matching or the password is very short!</string>
    <string name="upload_img">Upload image</string>
    <string name="upload_img_s">¡Image upload successfully!</string>
    <string name="article_name">Article Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="article">Item</string>
    <string name="article_des">Description of the article</string>
    <string name="article_price">Item price per day</string>
    <string name="up_and_cre">Upload Image An Create The Article</string>
    <string name="create_and_upload">¡The new article has been created!</string>
    <string name="upload_error">¡Error uploading the image!</string>
    <string name="logout">Logout</string>
    <string name="invalid">Invalid field</string>
    <string name="email_c">Contact email</string>
    <string name="rent_st">Rent store</string>
    <string name="sing_up">Sing up</string>
    <string name="item_list">Item list</string>
    <string name="add_item">Add a new item</string>
    <string name="profile">Profile</string>
    <string name="alredy">¿Already a member? Login Here.</string>

</resources>
