<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/ThemeOverlay.AppCompat">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/photoImageView"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_margin="8dp"
                android:background="@drawable/img_user" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/idTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bt_ubg"
                android:onClick="logOut"
                android:text="@string/logout"
                android:textColor="@color/white"
                 />

            <Button
                android:id="@+id/revokeBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bt_ubg"
                android:onClick="revoke"
                android:textColor="@color/white"
                android:text="@string/revoke" />

            <Button
                android:id="@+id/addimage"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bt_ubg"
                android:text="@string/upload_img"
                android:visibility="gone"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="227dp" />
            <Button
                android:id="@+id/createArt"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bt_ubg"
                android:visibility="gone"
                android:text="@string/article_name"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="227dp" />

        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>