<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/article_img"
            android:layout_marginTop="20dp"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_item" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/article_name"/>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/article_name"
                    android:text="@string/article_name"
                    android:textAlignment="textStart"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="start" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/article_des" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/article_desc"
                    android:text="@string/article_des"
                    android:textAlignment="textStart"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:gravity="start" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/article_price" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/article_price"
                    android:text="@string/article_price"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:gravity="start" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email_c" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/article_email"
                    android:text="@string/email_c"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:gravity="start" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>