<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_test">

    <RelativeLayout
        android:id="@+id/reltxt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"

        >

        <TextView
            android:id="@+id/txtespanta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="110dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="110dp"
            android:gravity="center"
            android:text="@string/register_from"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:fontFamily="@font/sofiaregular"
            />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cardform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/login_form_details_light">

        <RelativeLayout
            android:id="@+id/RLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="119dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"

                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@null"
                    android:padding="10dp"
                    android:src="@drawable/img_register"
                    android:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/register_from"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:fontFamily="@font/sofiaregular" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/linearLayout1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-10dp"
                android:rotation="45"
                android:src="@drawable/square" />

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"

                android:layout_marginRight="30dp">

                <ImageView
                    android:id="@+id/imgView_userIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:padding="8dp"
                    android:src="@drawable/img_user"
                    android:tint="@color/white" />

                <EditText
                    android:id="@+id/TxtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_userIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_userIcon"
                    android:background="@drawable/et_bg"
                    android:hint="@string/name"
                    android:paddingLeft="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/login_from_details"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout1.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:id="@+id/imgView_userIcon1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:padding="8dp"
                    android:src="@drawable/img_user"
                    android:tint="@color/white" />

                <EditText
                    android:id="@+id/TxtLastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_userIcon1"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_userIcon1"
                    android:background="@drawable/et_bg"
                    android:hint="@string/lastname"
                    android:paddingLeft="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/login_from_details"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout1.1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:id="@+id/imgView_passwordIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:padding="8dp"
                    android:src="@drawable/img_authentication"
                    android:tint="@color/white" />

                <EditText
                    android:id="@+id/TxtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_passwordIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_passwordIcon"
                    android:background="@drawable/et_bg"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/login_from_details"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout2"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:id="@+id/imgView_repasswordIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:padding="8dp"
                    android:src="@drawable/img_authentication"
                    android:tint="@color/white" />

                <EditText
                    android:id="@+id/TxtPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_repasswordIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_repasswordIcon"
                    android:background="@drawable/et_bg"
                    android:hint="@string/r_pass"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/login_from_details"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout3"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:id="@+id/imgView_emailIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:padding="8dp"
                    android:src="@drawable/img_email"
                    android:tint="@color/common_google_signin_btn_text_dark_default" />

                <EditText
                    android:id="@+id/TxtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_emailIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_emailIcon"
                    android:background="@drawable/et_bg"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/login_from_details"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

            </RelativeLayout>

            <CheckBox
                android:id="@+id/chkBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout4"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:paddingLeft="15dp"
                android:visibility="gone"
                android:fontFamily="sans-serif"
                android:text="I agree to the Terms of Service"
                android:textColor="@color/login_from_details" />

            <Button
                android:id="@+id/btn_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chkBox1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/btn_log"
                android:fontFamily="sans-serif-medium"
                android:text="@string/sing_up"
                android:textColor="@color/blue_l"
                />

            <Button
                android:id="@+id/BtnLoginB"
                android:layout_width="312dp"
                android:layout_height="31dp"
                android:layout_below="@+id/btn_signUp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="29dp"
                android:layout_marginRight="29dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/et_bg"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/alredy"
                android:textAllCaps="false"
                android:textColor="@color/login_from_details"
                android:textSize="13sp" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>


</RelativeLayout>